--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "symfony/polyfill-mbstring": "^1.2"
   },
   "require-dev": {
-    "codeclimate/php-test-reporter": "dev-master"
+    "codeclimate/php-test-reporter": "dev-master",
+    "phpunit/phpunit": "5.4.*"
   }
 }
