--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
       "LayerShifter\\TLDSupport\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "LayerShifter\\TLDSupport\\Tests\\": "tests/"
+    }
+  },
   "require": {
     "php": ">=5.5",
     "symfony/polyfill-mbstring": "^1.2"
