--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,9 @@ addons:
   code_climate:
     repo_token:: 3f96e0739f5ada6c5e2aedb71278a9b1ba2db06dc139426ae8d657b0f3020308
 
-after_script:
-      - vendor/bin/test-reporter
+before_script:
+  - mkdir -p build/logs
+
+script:
+  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+  - ./vendor/bin/test-reporter
