--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ install:
 notifications:
   email: false
 
-addons:
-  code_climate:
-    repo_token:: 3f96e0739f5ada6c5e2aedb71278a9b1ba2db06dc139426ae8d657b0f3020308
+env:
+  global:
+    - CODECLIMATE_REPO_TOKEN=3f96e0739f5ada6c5e2aedb71278a9b1ba2db06dc139426ae8d657b0f3020308
 
 before_script:
   - mkdir -p build/logs
