--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,7 @@ before_script:
   - mkdir -p build/logs
 
 script:
-  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
-  - ./vendor/bin/test-reporter
+  - ./vendor/bin/phpunit -v --coverage-clover ./build/logs/clover.xml
+
+after_script:
+  - ./vendor/bin/test-reporter --coverage-report ./build/logs/clover.xml
