--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,8 @@
     "phpmd/phpmd": "@stable",
     "phpunit/phpunit": "4.8.*",
     "squizlabs/php_codesniffer": "2.*"
+  },
+  "scripts": {
+    "test": "phpunit"
   }
 }
